--- a/requirements.txt
+++ b/requirements.txt
@@ -8,4 +8,8 @@ dj-database-url==0.3.0
 requests==2.2.1
 python-twitter==1.3.1
 unbabel-py==0.34
+python-social-auth==0.1.26
+six==1.6.1
+requests-oauthlib==0.4.0
+python-openid==2.2.5
 
